Added more module documentation

--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -5,3 +5,12 @@ table {
     width: 100%;
     font-size: 80%;
 }
+
+.collection-method-list > p {
+    column-count: 3; -moz-column-count: 3; -webkit-column-count: 3;
+    column-gap: 2em; -moz-column-gap: 2em; -webkit-column-gap: 2em;
+}
+
+.collection-method-list a {
+    display: block;
+}
