--- a/.vuepress/styles/index.styl
+++ b/.vuepress/styles/index.styl
@@ -1,5 +1,3 @@
-$contentWidth = 1200px
-
 table {
     display: table !important;
     width: 100%;
@@ -13,4 +11,8 @@ table {
 
 .collection-method-list a {
     display: block;
+}
+
+.badges svg.icon.outbound {
+    display: none;
 }
